rdb-sql/test/rdb/compile_fail/insert_values.cpp
#include "test_fail.hpp"

void test() {
  insert_into(p).values(1);
}

